vlib/v/checker/tests/multiple_pointer_yield_err.vv
struct Fail {
	name string
}

fn foo(bar &&&Fail) {}

fn main() {
	f := Fail{}
	foo(&&&f)
}
